fix: notices slider on mobile

--- a/src/styles/components/_swiper.scss
+++ b/src/styles/components/_swiper.scss
@@ -49,6 +49,7 @@
 
 .swiper--notices {
   .swiper-pagination {
+    @apply hidden md:block;
     bottom: -3rem !important;
   }
 
